src/window.c
@@ -1457,6 +1457,7 @@ idle_calc_showing (gpointer data)
   GSList *should_hide;
   GSList *unplaced;
   GSList *displays;
+  MetaWindow *first_window;
 
   meta_topic (META_DEBUG_WINDOW_STATE,
               "Clearing the calc_showing queue\n");
@@ -1505,6 +1506,10 @@ idle_calc_showing (gpointer data)
   /* top to bottom */
   should_show = g_slist_sort (should_show, stackcmp);
   should_show = g_slist_reverse (should_show);
+
+  first_window = copy->data;
+
+  meta_display_grab (first_window->display);
   
   tmp = unplaced;
   while (tmp != NULL)
@@ -1518,18 +1523,6 @@ idle_calc_showing (gpointer data)
       tmp = tmp->next;
     }
 
-  tmp = should_hide;
-  while (tmp != NULL)
-    {
-      MetaWindow *window;
-
-      window = tmp->data;
-
-      implement_showing (window, FALSE);
-      
-      tmp = tmp->next;
-    }
-  
   tmp = should_show;
   while (tmp != NULL)
     {
@@ -1538,6 +1531,18 @@ idle_calc_showing (gpointer data)
       window = tmp->data;
 
       implement_showing (window, TRUE);
+      
+      tmp = tmp->next;
+    }
+  
+  tmp = should_hide;
+  while (tmp != NULL)
+    {
+      MetaWindow *window;
+
+      window = tmp->data;
+
+      implement_showing (window, FALSE);
       
       tmp = tmp->next;
     }
@@ -1578,6 +1583,8 @@ idle_calc_showing (gpointer data)
         }
     }
 
+  meta_display_ungrab (first_window->display);
+  
   g_slist_free (copy);
 
   g_slist_free (unplaced);
